docs/apache-airflow-providers-amazon/2.0.0/_sources/_api/airflow/providers/amazon/aws/operators/index.rst.txt
:mod:`airflow.providers.amazon.aws.operators`
=============================================

.. py:module:: airflow.providers.amazon.aws.operators


Submodules
----------
.. toctree::
   :titlesonly:
   :maxdepth: 1

   athena/index.rst
   batch/index.rst
   cloud_formation/index.rst
   datasync/index.rst
   dms_create_task/index.rst
   dms_delete_task/index.rst
   dms_describe_tasks/index.rst
   dms_start_task/index.rst
   dms_stop_task/index.rst
   ec2_start_instance/index.rst
   ec2_stop_instance/index.rst
   ecs/index.rst
   emr_add_steps/index.rst
   emr_create_job_flow/index.rst
   emr_modify_cluster/index.rst
   emr_terminate_job_flow/index.rst
   glacier/index.rst
   glue/index.rst
   glue_crawler/index.rst
   s3_bucket/index.rst
   s3_bucket_tagging/index.rst
   s3_copy_object/index.rst
   s3_delete_objects/index.rst
   s3_file_transform/index.rst
   s3_list/index.rst
   sagemaker_base/index.rst
   sagemaker_endpoint/index.rst
   sagemaker_endpoint_config/index.rst
   sagemaker_model/index.rst
   sagemaker_processing/index.rst
   sagemaker_training/index.rst
   sagemaker_transform/index.rst
   sagemaker_tuning/index.rst
   sns/index.rst
   sqs/index.rst
   step_function_get_execution_output/index.rst
   step_function_start_execution/index.rst


